# maths_burkhardt

./: CMakeLists.txt  README.md  asa109.cpp  asa109_prb.cpp  asa152.cpp  asa226.cpp  asa241.cpp  asa243.cpp  asa243_prb.cpp  asa310.cpp  asa310_prb.cpp  bernstein_polynomial.cpp  beta_nc_prb.cpp  blas0.cpp  blas0.hpp  blas1_d.cpp  blas1_s.cpp  blas2_d.cpp  blas2_d.hpp  blas3_d.cpp  blas3_d.hpp  ccn_rule.cpp  cdflib.cpp  cdflib_prb.cpp  chebyshev1_rule.cpp  chebyshev2_rule.cpp  chebyshev_polynomial.cpp  chebyshev_polynomial.hpp  chebyshev_polynomial_prb.cpp  clenshaw_curtis_rule.cpp  divdif.cpp  filon.cpp  gegenbauer_polynomial.cpp  gegenbauer_polynomial_prb.cpp  gegenbauer_rule.cpp  gen_hermite_rule.cpp  gen_laguerre_rule.cpp  hermite_polynomial.cpp  hermite_polynomial_prb.cpp  hermite_rule.cpp  (+50 more)
